--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 # Project Specifics
-projectVersion=0.0.1
+projectVersion=0.1.0
 modrinthId=G9eJHDO2
 
 # Minecraft
-minecraftVersion=1.18.2
-minecraftRequired=1.18.2
-yarnMappings=1.18.2+build.3
-loaderVersion=0.14.3
-fabricApiVersion=0.48.0+1.18.2
-polymerVersion=0.2.0-pre.2+1.18.2
+minecraftVersion=1.19.3
+minecraftRequired=1.19.3
+yarnMappings=1.19.3+build.2
+loaderVersion=0.14.11
+fabricApiVersion=0.68.1+1.19.3
+polymerVersion=0.3.0-rc.4+1.19.3
 
 # Plugins
-systemProp.loomVersion=0.12.9
-systemProp.spotlessVersion=6.5.1
-systemProp.minotaurVersion=2.1.2
-systemProp.quiltflowerVersion=1.7.1
+systemProp.loomVersion=1.+
+systemProp.spotlessVersion=6.+
+systemProp.minotaurVersion=2.+
+systemProp.quiltflowerVersion=1.+
 
 # Gradle Extras
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
