--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ projectVersion=0.1.1
 modrinthId=G9eJHDO2
 
 # Minecraft
-minecraftVersion=1.19.3
-minecraftRequired=1.19.3
-yarnMappings=1.19.3+build.2
-loaderVersion=0.14.11
-fabricApiVersion=0.68.1+1.19.3
-polymerVersion=0.3.0-rc.4+1.19.3
+minecraftVersion=1.19.4
+minecraftRequired=1.19.4
+yarnMappings=1.19.4+build.1
+loaderVersion=0.14.17
+fabricApiVersion=0.76.0+1.19.4
+polymerVersion=0.4.0+1.19.4
 
 # Plugins
 systemProp.loomVersion=1.+
