--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 # Project Specifics
-projectVersion=0.2.0
+projectVersion=0.3.0
 modrinthId=G9eJHDO2
 
 # Minecraft
 minecraftVersion=1.19.4
 minecraftRequired=1.19.4
+minecraftCompatible=1.19.4,1.20-rc1
 yarnMappings=1.19.4+build.1
 loaderVersion=0.14.17
 fabricApiVersion=0.76.0+1.19.4
