--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ modrinthId=G9eJHDO2
 
 # Minecraft
 minecraftVersion=1.19.4
-minecraftRequired=1.19.4
-minecraftCompatible=1.19.4,1.20-rc1
+minecraftRequired=1.19.3
+minecraftCompatible=1.19.3,1.19.4,1.20,1.20.1
 yarnMappings=1.19.4+build.1
 loaderVersion=0.14.17
 fabricApiVersion=0.76.0+1.19.4
