--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,12 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - uses: gradle/actions/wrapper-validation@v3
+      - uses: actions/setup-java@v4
         with:
-          submodules: true
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 17
+          distribution: temurin
+          java-version: 21
       - name: Build and publish with Gradle
         run: ./gradlew modrinth publish
         env:
@@ -22,7 +22,7 @@ jobs:
           MODRINTH_TOKEN: ${{secrets.MODRINTH}}
           CHANGELOG: ${{ github.event.release.body }}
       - name: Upload build artifacts
-        uses: AButler/upload-release-assets@v2.0
+        uses: AButler/upload-release-assets@v3.0
         with:
           files: 'build/libs/*;!build/libs/*-sources.jar;!build/libs/*-dev.jar'
           repo-token: ${{secrets.GITHUB_TOKEN}}
