--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ modrinthId=G9eJHDO2
 
 # Minecraft
 minecraftVersion=1.20.1
-minecraftRequired=1.19.3
+minecraftRequired=>=1.19.3- <1.20.5
 minecraftCompatible=1.19.3,1.19.4,1.20,1.20.1,1.20.2,1.20.3,1.20.4
 yarnMappings=1.20.1+build.5
 loaderVersion=0.15.11
