--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Project Specifics
-projectVersion=0.8.3
+projectVersion=0.8.4
 modrinthId=G9eJHDO2
 
 # Minecraft
-minecraftVersion=1.21
-minecraftRequired=>=1.20.5- <1.21.2
-minecraftCompatible=1.20.5,1.20.6,1.21,1.21.1
-yarnMappings=1.21+build.7
-loaderVersion=0.15.11
-fabricApiVersion=0.100.6+1.21
-polymerVersion=0.9.4+1.21
+minecraftVersion=1.21.2
+minecraftRequired=>=1.21.2-
+minecraftCompatible=1.21.2,1.21.3,1.21.4
+yarnMappings=1.21.2+build.1
+loaderVersion=0.16.10
+fabricApiVersion=0.106.1+1.21.2
+polymerVersion=0.10.0+1.21.2
 
 # Plugins
 systemProp.loomVersion=1.+
