--- a/.github/ISSUE_TEMPLATE/00-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/00-bug-report.yml
@@ -1,6 +1,7 @@
 name: Bug report
 description: Create a bug report to help us improve.
 labels: [ 'bug' ]
+type: bug
 
 body:
   - type: textarea
@@ -10,11 +11,11 @@ body:
         What platform & version of the mod are you using?
 
         Example:
-          - **Minecraft**: 1.18.2 Server
-          - **Polysit**: 0.0.0-beta.5
-          - **Polymer**: 0.2.0-pre.2
-          - **Loader**: Quilt
-          - **Java**: Adoptium 17.0.3
+          - **Minecraft**: 1.21.4 Server
+          - **Polysit**: 0.8.4+1.21.2
+          - **Polymer**: 0.11.6+1.21.4
+          - **Loader**: Fabric 0.16.10
+          - **Java**: Temurin 21.0.6+7
       value: |
         - **Minecraft**:
         - **Polysit**:
